_sass/_navbar.scss
.navbar {
    font-family: $font-family-sans-serif;
    margin-bottom: $navbar-margin-bottom;
    position: absolute;
    top: 0;
    width: 100%;
    z-index: 1;
}

.navbar__title {
    background-color: rgba($color-primary, 1);
    color: $color-primary-contrast;
    float: left;
    font-size: $font-size-large;
    font-weight: bold;
    padding: 16px 22px;

    &:hover,
    &:focus {
        background-color: rgba($color-primary, 0.8);
        color: $color-primary-contrast;
        text-decoration: none;
    }
}

.navbar-nav {
    float: right;
    margin: 0;
}

.navbar-nav__item {
    float: left;
    list-style: none;
}

.navbar-nav__item-link {
    background: rgba($color-primary-contrast, 0.6);
    display: block;
    padding: 20.5px 22px;

    &:hover,
    &:focus {
        background: rgba($color-primary-contrast, 0.45);
        color: $color-primary-contrast;
        text-decoration: none;
    }
}

